--- a/trabalhosfeitos/estilos/style.css
+++ b/trabalhosfeitos/estilos/style.css
@@ -1,67 +1,25 @@
-@charset "UTF-8";
-
 * {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
 }
 
+
 html, body {
-    background-color: #00060F;
-}
-
-header > h1 {
+    height: 100vh;
+    width: 98vw;
+    background-color: rgba(0, 0, 0, 0.822);
     color: white;
     text-align: center;
-    font-family: 'Abril Fatface', cursive;
 }
-
-main {
-    padding: 0px 20px;
-    padding-bottom: 30px;
-}
-
-h1 {
-    padding: 10px;
-    font-family: 'Abril Fatface', cursive;
-}
-
-article {
-    background: white;
-    padding: 30px;
-}
-
-article> h2 {
-    text-align: center; 
-}
-
-article > p {
-    padding: 30px 0px;
-    text-align: center;
-    font-size: 1.3em;
-}
-
-menu > ul > li > a {
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    text-align: center;
-    background-color: #032333;
-    color: white;
-    border-top: 2px solid #032F33;
-}
-
-menu > ul > li > a:hover {
-    background-color: #032333;
-}
-
 
 footer {
-    padding: 10px;
-    background: #032F33;
+    background: black;
+    color: white;
     text-align: center;
+    padding: 10px;
 }
 
-footer, a {
+footer >p > a {
     text-decoration: none;
 }
