--- a/trabalhosfeitos/estilos/style.css
+++ b/trabalhosfeitos/estilos/style.css
@@ -13,6 +13,43 @@ html, body {
     text-align: center;
 }
 
+span#burguer {
+    background-color: rgb(48, 48, 48);
+    color: white;
+    display: block;
+    text-align: center;
+    padding: 10px;
+}
+
+span#burguer:hover {
+    background-color: #032F33;
+    color: black;
+    cursor: pointer;
+}
+
+menu {
+    display: none;
+}
+
+menu > ul{
+    list-style-type: none;
+}
+
+menu > ul > li > a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    text-align: center;
+    background-color: #0d4b69;
+    color: white;
+    border-top: 2px solid #00060fa2;
+}
+
+menu > ul > li > a:hover {
+    background-color: rgb(16, 19, 25);
+    color: white;
+}
+
 footer {
     background: black;
     color: white;
