coloquei o feed do instagram e atualizei os estilos do index

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -99,6 +99,10 @@ section#img01 {
     background-attachment: fixed;
 }
 
+section > p {
+    font-size: 1.8em;
+}
+
 section#redes-sociais {
     text-align: center;
 }
